stuck at flatten nested list

--- a/week1/week1-MultilabelClassification.ipynb
+++ b/week1/week1-MultilabelClassification.ipynb
@@ -435,7 +435,8 @@
     "\n",
     "######################################\n",
     "######### YOUR CODE HERE #############\n",
-    "######################################"
+    "######################################\n",
+    "tags_counts.update{tag:tag.counter()}"
    ]
   },
   {
