finally word count

--- a/week1/week1-MultilabelClassification.ipynb
+++ b/week1/week1-MultilabelClassification.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "4                      Configuring Tomcat to Use SSL                [java]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        " 'terminate windows phone 81 app']"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,6 +454,9 @@
     "#print(y_train)\n",
     "y_train_flattened = flatten_nested_list(y_train)\n",
     "X_train_flattened = flatten_nested_list(X_train)\n",
+    "y_train_flattened = ' '.join(y_train_flattened)\n",
+    "X_train_flattened = ' '.join(X_train_flattened)\n",
+    "#print(X_train_flattened.split()[0:50])\n",
     "#y_train_flattened_prepared = [text_prepare(y) for y in y_train_flattened]\n",
     "\n",
     "#print(X_train_flattened[:3])\n",
@@ -461,11 +464,12 @@
     "    #print(tag)\n",
     "    #print(y_train_flattened.count(tag))\n",
     "#    tags_counts.update({tag:y_train_flattened.count(tag)}) # really really slow\n",
-    "tags_counts= Counter(y_train_flattened)    \n",
+    "tags_counts= Counter(y_train_flattened.split())   \n",
+    "#print(tags_counts[0])\n",
     "#for word in X_train_flattened:\n",
     "    #print(word)\n",
     "#    words_counts.update({word:X_train_flattened.count(word)})\n",
-    "words_counts = Counter(X_train_flattened)"
+    "words_counts = Counter((X_train_flattened).split())"
    ]
   },
   {
@@ -482,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +495,7 @@
      "text": [
       "Current answer for task WordsTagsCount is:\n",
       " javascript,c#,java\n",
-      "mean,difference ,conversion failed converting date time character string...\n"
+      "using,php,java...\n"
      ]
     }
    ],
@@ -550,24 +554,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "DICT_SIZE = 5000\n",
     "#print(most_common_words[:3])\n",
     "WORDS_TO_INDEX = {}\n",
     "INDEX_TO_WORDS = {}\n",
     "words_sorted = sorted(words_counts.items(), key=lambda x: x[1], reverse=True)\n",
+    "print(words_counts[0])\n",
     "i=0\n",
     "for dict in words_sorted:\n",
     "    word = dict[0]\n",
     "    WORDS_TO_INDEX.update({word:i})####### YOUR CODE HERE ####### FIXME did not get the intension of this#\n",
     "    INDEX_TO_WORDS.update({i:word})####### YOUR CODE HERE #######\n",
+    "    if i == 4999:\n",
+    "        break\n",
     "    i=i+1\n",
     "\n",
     "#print(WORDS_TO_INDEX)\n",
     "ALL_WORDS = WORDS_TO_INDEX.keys()\n",
+    "#print(len(ALL_WORDS))\n",
     "\n",
     "def my_bag_of_words(text, words_to_index, dict_size):\n",
     "    \"\"\"\n",
@@ -582,14 +598,14 @@
     "    ######################################\n",
     "    for word in text.split(' '):\n",
     "        if word in words_to_index:\n",
-    "            result_vector[words_to_index[word]]=1\n",
+    "            result_vector[words_to_index[word]]+=1\n",
     "    \n",
     "    return result_vector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,20 +654,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "index 89154 is out of bounds for axis 0 with size 5000",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-86-fa0e9a216838>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mX_train_mybag\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msp_sparse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msp_sparse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcsr_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_bag_of_words\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mWORDS_TO_INDEX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDICT_SIZE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtext\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mX_train\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mX_val_mybag\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msp_sparse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msp_sparse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcsr_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_bag_of_words\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mWORDS_TO_INDEX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDICT_SIZE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtext\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mX_val\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mX_test_mybag\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msp_sparse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msp_sparse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcsr_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_bag_of_words\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mWORDS_TO_INDEX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDICT_SIZE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtext\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'X_train shape '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_train_mybag\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'X_val shape '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_val_mybag\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-86-fa0e9a216838>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mX_train_mybag\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msp_sparse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msp_sparse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcsr_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_bag_of_words\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mWORDS_TO_INDEX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDICT_SIZE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtext\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mX_train\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mX_val_mybag\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msp_sparse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msp_sparse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcsr_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_bag_of_words\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mWORDS_TO_INDEX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDICT_SIZE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtext\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mX_val\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mX_test_mybag\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msp_sparse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msp_sparse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcsr_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_bag_of_words\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mWORDS_TO_INDEX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDICT_SIZE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtext\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'X_train shape '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_train_mybag\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'X_val shape '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_val_mybag\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-82-8ca33b16b1f7>\u001b[0m in \u001b[0;36mmy_bag_of_words\u001b[0;34m(text, words_to_index, dict_size)\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mwords_to_index\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m             \u001b[0mresult_vector\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mwords_to_index\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mresult_vector\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 89154 is out of bounds for axis 0 with size 5000"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train shape  (100000, 5000)\n",
+      "X_val shape  (30000, 5000)\n",
+      "X_test shape  (20000, 5000)\n"
      ]
     }
    ],
@@ -680,18 +692,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'X_train_mybag' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-37-a621492a4aaf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX_train_mybag\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mnon_zero_elements_count\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m####### YOUR CODE HERE #######\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'X_train_mybag' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.  0.  0. ...,  0.  0.  0.]\n",
+      "5000\n",
+      "8.0\n",
+      "Current answer for task BagOfWords is:\n",
+      " 4993...\n"
      ]
     }
    ],
@@ -699,10 +711,9 @@
     "row = X_train_mybag[10].toarray()[0]\n",
     "print(row)\n",
     "print(len(row))\n",
-    "print(sum(row))\n",
-    "non_zero_elements_count = len(row) - sum(row) ####### YOUR CODE HERE #######\n",
+    "non_zero_elements_count = len(row) -  np.count_nonzero(row) ####### YOUR CODE HERE #######\n",
     "\n",
-    "grader.submit_tag('BagOfWords', str(non_zero_elements_count))"
+    "grader.submit_tag('BagOfWords', non_zero_elements_count)"
    ]
   },
   {
@@ -1152,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1167,9 +1178,9 @@
       "save php date...\n",
       "Task WordsTagsCount:\n",
       " javascript,c#,java\n",
-      "mean,difference ,conversion failed converting date time character string...\n",
+      "using,php,java...\n",
       "Task BagOfWords:\n",
-      " ----------...\n",
+      " 4993...\n",
       "Task MultilabelClassification:\n",
       " ----------...\n"
      ]
@@ -1181,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1196,9 +1207,9 @@
       "save php date...\n",
       "Task WordsTagsCount:\n",
       " javascript,c#,java\n",
-      "mean,difference ,conversion failed converting date time character string...\n",
+      "using,php,java...\n",
       "Task BagOfWords:\n",
-      " ----------...\n",
+      " 4993...\n",
       "Task MultilabelClassification:\n",
       " ----------...\n"
      ]
@@ -1206,7 +1217,7 @@
    ],
    "source": [
     "STUDENT_EMAIL = 'birdbird1117@gmail.com'# EMAIL \n",
-    "STUDENT_TOKEN = 'sUbERJmaoaYqzIGa'# TOKEN \n",
+    "STUDENT_TOKEN = 'FRVLfpRLIhUSuhLO'# TOKEN \n",
     "grader.status()"
    ]
   },
@@ -1219,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
