--- a/week1/week1-MultilabelClassification.ipynb
+++ b/week1/week1-MultilabelClassification.ipynb
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -701,9 +701,8 @@
      "text": [
       "[ 0.  0.  0. ...,  0.  0.  0.]\n",
       "5000\n",
-      "8.0\n",
       "Current answer for task BagOfWords is:\n",
-      " 4993...\n"
+      " 7...\n"
      ]
     }
    ],
@@ -711,7 +710,7 @@
     "row = X_train_mybag[10].toarray()[0]\n",
     "print(row)\n",
     "print(len(row))\n",
-    "non_zero_elements_count = len(row) -  np.count_nonzero(row) ####### YOUR CODE HERE #######\n",
+    "non_zero_elements_count = np.count_nonzero(row) ####### YOUR CODE HERE #######\n",
     "\n",
     "grader.submit_tag('BagOfWords', non_zero_elements_count)"
    ]
@@ -729,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,11 +751,14 @@
     "    # Transform the train, test, and val sets and return the result\n",
     "    \n",
     "    \n",
-    "    tfidf_vectorizer = ####### YOUR CODE HERE #######\n",
+    "    tfidf_vectorizer = TfidfVectorizer(min_df=5, max_df=0.9, ngram_range=(1,2), token_pattern='(\\S+)')####### YOUR CODE HERE #######\n",
     "    \n",
     "    ######################################\n",
     "    ######### YOUR CODE HERE #############\n",
     "    ######################################\n",
+    "    X_train = tfidf_vectorizer.fit_transform(X_train)\n",
+    "    X_val = tfidf_vectorizer.fit_transform(X_val)\n",
+    "    X_test = tfidf_vectorizer.fit_transform(X_test)\n",
     "    \n",
     "    return X_train, X_val, X_test, tfidf_vectorizer.vocabulary_"
    ]
@@ -772,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,11 +784,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "######### YOUR CODE HERE #############"
+    "######### YOUR CODE HERE #############\n",
+    "print('c++' in tfidf_vocab)\n",
+    "print('c#' in tfidf_vocab)"
    ]
   },
   {
@@ -805,11 +818,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "######### YOUR CODE HERE #############"
+    "######### YOUR CODE HERE #############\n",
+    "print('c++' in tfidf_vocab)\n",
+    "print('c#' in tfidf_vocab)"
    ]
   },
   {
@@ -1163,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1204,7 @@
       " javascript,c#,java\n",
       "using,php,java...\n",
       "Task BagOfWords:\n",
-      " 4993...\n",
+      " 7...\n",
       "Task MultilabelClassification:\n",
       " ----------...\n"
      ]
@@ -1192,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1233,7 @@
       " javascript,c#,java\n",
       "using,php,java...\n",
       "Task BagOfWords:\n",
-      " 4993...\n",
+      " 7...\n",
       "Task MultilabelClassification:\n",
       " ----------...\n"
      ]
@@ -1230,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
